--- a/Semana-6/api-todo/package.json
+++ b/Semana-6/api-todo/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "express": "^4.17.2",
-    "nodemon": "^2.0.15",
     "uuid": "^8.3.2",
     "yarn": "^1.22.17"
   },
@@ -9,10 +8,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
